--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,10 +1,11 @@
-version: 3
+version: '3.7'
 
 services:
   web:
+    container_name: webapp
     build:
       context: ../.
-      dockerfile: Dockerfile
+      dockerfile: docker/Dockerfile
     depends_on:
       - db
     ports:
@@ -15,7 +16,6 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: 'db'
-      MYSQL_USER: 'user'
       MYSQL_ROOT_PASSWORD: 'mysql_pwd'
     ports:
       - "3306:3306"
