--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>5.2.5.RELEASE</version>
+		</dependency>
+
 
 		<!-- test -->
 		<dependency>
