--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,11 @@
 		<version>2.2.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.malik.ithar</groupId>
 	<artifactId>security-actuator-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>security-actuator-demo</name>
 	<description>Demo project for Spring Boot rest web-service, sample web-app, security and actuator</description>
 
