--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=root
 spring.datasource.password=mysql_pwd
+
+
+# Enable Actuator Endpoints
+management.endpoints.web.exposure.include=*
+
+# Used by Actuator /info endpoint
+info.app.name=Spring Security Demo App
+info.app.descirption=A demo application for Spring Security & Actuator
+info.app.version=1.0.0
+
